# LPV

./: CMakeLists.txt  README.md
models/iCub-Object-Table/: A_k  Mu  Priors  Sigma  Theta_GPR_data.txt  Theta_GPR_model.txt  attractor
models/iCub-Object-Table-S/: A_k  Mu  Priors  Sigma  attractor
src/: test_lpvDS.cpp
